# ivcbench

./: .dockerignore  .dockerignore.train  .gitignore  .zenodo.json  CITATION.cff  Containerfile  Containerfile.train  LICENSE  Makefile  README.md  REPRODUCE.md  environment.yml  pyproject.toml  requirements.txt
configs/: base.yaml
data/: README.md
model_runners/: README.md  attentionpert_runner.py  cellot_frangieh_runner.py  cinemaot_runner.py  cpa_c1_runner.py  cpa_c5_runner.py  cpa_runner.py  gears_runner.py  pertadapt_runner.py  pertadapt_soskic_runner.py  scfoundation_runner.py  scgen_c1_runner.py  scgen_c5_runner.py  scgen_runner.py  scgpt_runner.py  scpram_runner.py  scpram_soskic_runner.py  state_c1_runner.py  state_c5_runner.py  state_runner.py  state_soskic_runner.py
predictions/: COVERAGE.md  README.md
reproduction/: MORNING_REPORT.md  cross_cluster_headline_repro.csv  verdict_diff_35cell.csv
scripts/: README.md  _train_lib.sh  add_results_content.py  apply_3seed_to_docx.py  apply_disclosures_to_docx.py  apply_ega_dac.md  apply_loop_revisions_to_docx.py  apply_models_integration.py  apply_revision_to_docx.py  apply_soskic_results_edits.py  apply_v2_to_docx.py  assemble_cross_cluster.py  assemble_fit_matrix.py  assemble_rewrap_headline.py  assemble_s12_energy_distance.py  assemble_s8_energy_distance.py  build_supp_results_docx.py  build_train_image.sh  c1_alt_partition.py  c1_donor_inflation_fast.py  c1_donor_inflation_seeds.py  c1_ifn_recovery.py  c1_ifn_recovery_scgen.py  c2_donor_paired.py  c2_soskic_donor.py  c2_soskic_loct.py  c3_probe_validate.py  (+108 more)
(+1613 files in other folders)
